# htsget-rs

./: .clippy.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  compose.yml  release-plz.toml
async-crypt4gh/: Cargo.toml  README.md
async-crypt4gh/src/: advance.rs  edit_lists.rs  error.rs  lib.rs
async-crypt4gh/src/decoder/: mod.rs
async-crypt4gh/src/decrypter/: builder.rs  data_block.rs  header_packet.rs  mod.rs
async-crypt4gh/src/decrypter/header/: mod.rs  packets.rs
async-crypt4gh/src/reader/: builder.rs  mod.rs
async-crypt4gh/src/util/: mod.rs
htsget-actix/: CHANGELOG.md  Cargo.toml  README.md
htsget-actix/benches/: request_benchmarks.rs
htsget-actix/src/: lib.rs  main.rs
htsget-actix/src/handlers/: get.rs  mod.rs  post.rs  pretty_json.rs  service_info.rs
htsget-actix/src/middleware/: auth.rs  mod.rs
htsget-axum/: CHANGELOG.md  Cargo.toml  README.md
htsget-axum/src/: data_server.rs  error.rs  lib.rs  main.rs  server.rs
htsget-axum/src/handlers/: get.rs  mod.rs  post.rs  service_info.rs
htsget-axum/src/middleware/: auth.rs  mod.rs
htsget-axum/src/server/: data.rs  mod.rs  ticket.rs
htsget-benchmarks/: Cargo.toml  README.md  lib.rs
htsget-benchmarks/benches/: refserver_benchmarks.rs  request_benchmarks.rs  search_benchmarks.rs
htsget-benchmarks/src/: main.rs  not_perf.rs
htsget-cli/: Cargo.toml
htsget-cli/src/: main.rs
htsget-cloudflare/: Cargo.toml  package-lock.json  package.json  wrangler.toml
htsget-cloudflare/src/: lib.rs  main.rs
htsget-cloudflare/src/handlers/: get.rs  mod.rs  post.rs  service_info.rs
htsget-config/: CHANGELOG.md  Cargo.toml  README.md  config.toml
htsget-config/docs/: generate.sh
htsget-config/docs/examples/: auth.toml  basic.toml  c4gh.toml  default.toml  json_path_storage.toml  s3_storage.toml  tls_data_server.toml  tls_ticket_server.toml  url_storage.toml
htsget-config/docs/schemas/: auth.schema.json
htsget-config/examples/config-files/: basic.toml  c4gh.toml  crypt4gh.toml  default.toml  s3_storage.toml  tls_data_server.toml  tls_ticket_server.toml  url_storage.toml
htsget-config/src/: config.rs  data_sources.rs  encryption_scheme.rs  error.rs  lib.rs  regex_resolver.rs  resolver.rs  tls.rs  types.rs
htsget-config/src/config/: aws.rs  cors.rs  crypt4gh.rs  data_server.rs  error.rs  location.rs  mod.rs  parser.rs  service_info.rs  simple.rs  ticket_server.rs
htsget-config/src/config/advanced/: allow_guard.rs  auth.rs  callout.rs  cors.rs  file.rs  http.rs  json_path.rs  mod.rs  regex_location.rs  (+4 more)
htsget-config/src/http/: client.rs  mod.rs
htsget-config/src/regex_resolver/: aws.rs  gds.rs  mod.rs
htsget-config/src/resolver/: allow_guard.rs  mod.rs  object.rs
htsget-config/src/storage/: c4gh.rs  file.rs  json_path.rs  local.rs  mod.rs  resolve.rs  resolver.rs  s3.rs  url.rs
htsget-config/src/tls/: client.rs  crypt4gh.rs  mod.rs
htsget-devtools/: Cargo.toml
htsget-devtools/src/: bam.rs  bcf.rs  main.rs  vcf.rs
htsget-http/: CHANGELOG.md  Cargo.toml  README.md
htsget-http-actix/: Cargo.toml  README.md  config.json  docker-htsget-refserver.sh  htsget-refserver-config.json
htsget-http-actix/benches/: docker-htsget-refserver.sh  dowload-heavy-test-files.sh  heavy-request-benchmark.rs  htsget-refserver-config.json  request-benchmark.rs  request_benchmarks.rs
htsget-http-actix/src/: config.rs  get.rs  lib.rs  main.rs  post.rs
htsget-http-actix/src/handlers/: async_handlers.rs  get.rs  mod.rs  post.rs  pretty_json.rs  service_info.rs
htsget-http-aws-lambda/: Cargo.toml  README.md
htsget-http-aws-lambda/src/: config.rs  lib.rs  main.rs
htsget-http-aws-lambda/src/handlers/: async_handlers.rs  get.rs  mod.rs  post.rs  pretty_json.rs
htsget-http-core/: Cargo.toml  README.md
htsget-http-core/src/: async_http_core.rs  error.rs  http_core.rs  json_response.rs  lib.rs  post_request.rs  query_builder.rs  service_info.rs
htsget-http-core/src/blocking/: mod.rs  service_info.rs
htsget-http-lambda/: Cargo.toml  README.md
htsget-http-lambda/src/: lib.rs  main.rs
htsget-http-lambda/src/handlers/: get.rs  mod.rs  post.rs  service_info.rs
htsget-http-lambda/tests/: integration_tests.rs
htsget-http/src/: error.rs  http_core.rs  lib.rs  main.rs  post_request.rs  query_builder.rs  service_info.rs
htsget-http/src/middleware/: auth.rs  error.rs  mod.rs
htsget-http/src/response/: mod.rs  query_builder.rs
htsget-integration-tests-s3/: Cargo.toml
htsget-integration-tests-s3/src/: main.rs
htsget-lambda/: CHANGELOG.md  Cargo.toml  README.md
htsget-lambda/src/: lib.rs  main.rs
htsget-lambda/src/handlers/: get.rs  mod.rs  post.rs  service_info.rs
htsget-search/: CHANGELOG.md  Cargo.toml  README.md
htsget-search/benches/: benchmark.rs  flamegraphs.rs  search_benchmarks.rs
htsget-search/src/: bam_search.rs  bcf_search.rs  cram_search.rs  from_storage.rs  htsget.rs  lib.rs  search.rs  simple.rs  vcf_search.rs
htsget-search/src/htsget/: async_htsget.rs  bam.rs  bam_search.rs  bcf_search.rs  cram_search.rs  from_storage.rs  mod.rs  search.rs  storage.rs  vcf_search.rs
htsget-search/src/storage/: async_storage.rs  aws.rs  axum_server.rs  crypt4gh.rs  crypt4gh_block.rs  data_server.rs  gds.rs  key_extractor.rs  local.rs  local_server.rs  mod.rs  s3.rs  s3_testing.rs  ticket_server.rs  url.rs
htsget-search/tests/: url_storage_crypt4gh.rs
htsget-storage/: CHANGELOG.md  Cargo.toml  README.md
htsget-storage/src/: data_server.rs  error.rs  json_path.rs  lib.rs  local.rs  resolve.rs  s3.rs  types.rs  url.rs
htsget-storage/src/c4gh/: edit.rs  mod.rs  storage.rs
htsget-test/: CHANGELOG.md  Cargo.toml  README.md
htsget-test-utils/: Cargo.toml  README.md
htsget-test-utils/src/: cors_tests.rs  http_tests.rs  lib.rs  server_tests.rs  test_traits.rs  util.rs
htsget-test/src/: aws_mocks.rs  c4gh.rs  concat_tests.rs  cors_tests.rs  crypt4gh.rs  error.rs  http_tests.rs  lib.rs  server_tests.rs  util.rs
htsget-test/src/http/: auth.rs  concat.rs  cors.rs  mod.rs  server.rs
(+2361 files in other folders)
