[package]
name = "async-crypt4gh"
version = "0.1.0"
rust-version = "1.64"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"
description = "An async wrapper around crypt4gh-rust using AsyncRead and Stream."
license = "MIT"
documentation = "https://github.com/umccr/htsget-rs/blob/main/async-crypt4gh/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/async-crypt4gh/README.md"
repository = "https://github.com/umccr/htsget-rs"

[dependencies]
crypt4gh = { version = "0.4", git = "https://github.com/umccr/crypt4gh-rust", branch = "fix_rust_crypto_et_al" }
pin-project-lite = "0.2"
hex-literal = "0.4"
bytes = "1.4"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
async-trait = "0.1"
rustls = "0.21"
rand_chacha = "0.3.1"
bincode = "1.3.3"

[dev-dependencies]
noodles = { version = "0.60", features = ["async", "bam", "sam"] }

htsget-test = { version = "0.5.0", path = "../htsget-test", features = ["http-tests", "crypt4gh"], default-features = false }