[package]
name = "htsget-actix"
version = "0.6.0"
rust-version = "1.74"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
license = "MIT"
description = "A webserver instance of htsget-rs configured using htsget-config."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-actix/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-actix/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
s3-storage = ["htsget-config/s3-storage", "htsget-search/s3-storage", "htsget-http/s3-storage", "htsget-test/s3-storage"]
url-storage = ["htsget-config/url-storage", "htsget-search/url-storage", "htsget-http/url-storage", "htsget-test/url-storage"]
default = []

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-cors = "0.7"
http_1 = { package = "http", version = "1" }
http = "0.2"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3" }
htsget-http = { version = "0.4.13", path = "../htsget-http", default-features = false }
htsget-search = { version = "0.7.0", path = "../htsget-search", default-features = false }
htsget-config = { version = "0.9.0", path = "../htsget-config", default-features = false }
htsget-test = { version = "0.6.0", path = "../htsget-test", features = ["http"], default-features = false }
futures = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tracing-actix-web = "0.7"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"

criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tempfile = "3"

[[bench]]
name = "request-benchmarks"
harness = false
path = "benches/request_benchmarks.rs"
