[package]
name = "htsget-actix"
version = "0.7.2"
rust-version = "1.75"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
license = "MIT"
description = "A webserver instance of htsget-rs using actix-web."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-actix/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-actix/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
s3-storage = ["htsget-config/s3-storage", "htsget-search/s3-storage", "htsget-http/s3-storage", "htsget-axum/s3-storage", "htsget-test/s3-storage"]
url-storage = ["htsget-config/url-storage", "htsget-search/url-storage", "htsget-http/url-storage", "htsget-axum/url-storage", "htsget-test/url-storage"]
experimental = [
    "htsget-config/experimental",
    "htsget-search/experimental",
    "htsget-http/experimental",
    "htsget-axum/experimental",
    "htsget-test/experimental"
]
default = []

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
actix-cors = "0.7"
http_1 = { package = "http", version = "1" }
http = "0.2"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tracing-actix-web = "0.7"
tracing = "0.1"

htsget-http = { version = "0.5.1", path = "../htsget-http", default-features = false }
htsget-search = { version = "0.9.1", path = "../htsget-search", default-features = false }
htsget-config = { version = "0.12.0", path = "../htsget-config", default-features = false }
htsget-test = { version = "0.7.1", path = "../htsget-test", features = ["http"], default-features = false }
htsget-axum = { version = "0.2.2", path = "../htsget-axum", default-features = false }

[dev-dependencies]
async-trait = "0.1"

criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tempfile = "3"

[[bench]]
name = "request-benchmarks"
harness = false
path = "benches/request_benchmarks.rs"
