[package]
name = "htsget-actix"
version = "0.8.0"
rust-version = "1.83"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
license = "MIT"
description = "A webserver instance of htsget-rs using actix-web, which serves data according to the htsget protocol."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-actix/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-actix/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
aws = ["htsget-config/aws", "htsget-search/aws", "htsget-http/aws", "htsget-axum/aws", "htsget-test/aws"]
url = ["htsget-config/url", "htsget-search/url", "htsget-http/url", "htsget-axum/url", "htsget-test/url"]
experimental = [
    "htsget-config/experimental",
    "htsget-search/experimental",
    "htsget-http/experimental",
    "htsget-axum/experimental",
    "htsget-test/experimental"
]
default = []

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls = "0.23"
actix-cors = "0.7"
http_1 = { package = "http", version = "1" }
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

tracing-actix-web = "0.7"
tracing = "0.1"

htsget-http = { version = "0.5.2", path = "../htsget-http", default-features = false }
htsget-search = { version = "0.10.0", path = "../htsget-search", default-features = false }
htsget-config = { version = "0.13.0", path = "../htsget-config", default-features = false }
htsget-axum = { version = "0.3.0", path = "../htsget-axum", default-features = false }

[dev-dependencies]
htsget-test = { version = "0.7.2", path = "../htsget-test", features = ["http"], default-features = false }

async-trait = "0.1"

criterion = { version = "0.5", features = ["async_tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tempfile = "3"

[[bench]]
name = "request-benchmarks"
harness = false
path = "benches/request_benchmarks.rs"
