[package]
name = "htsget-axum"
version = "0.8.3"
rust-version = "1.88"
authors = ["Marko Malenic <mmalenic1@gmail.com>"]
edition = "2024"
license = "MIT"
description = "A webserver instance of htsget-rs using Axum, which serves data according to the htsget protocol."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-axum/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-axum/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
aws = [
    "htsget-config/aws",
    "htsget-search/aws",
    "htsget-test/aws",
    "htsget-test/aws",
    "htsget-http/aws"
]
url = [
    "htsget-config/url",
    "htsget-search/url",
    "htsget-test/url",
    "htsget-http/url"
]
experimental = [
    "htsget-config/experimental",
    "htsget-search/experimental",
    "htsget-test/experimental",
    "htsget-http/experimental"
]
default = []

[dependencies]
# Axum server
serde_json = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
rustls = "0.23"
hyper-util = "0.1"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
http = "1"
axum = { version = "0.8", features = ["http2"] }
axum-extra = { version = "0.12", features = ["erased-json", "typed-header"] }
tower = { version = "0.5", features = ["make", "util"] }
futures = { version = "0.3" }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Async
tokio-rustls = "0.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

# HTTP client for JWK fetching
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Tracing and error
thiserror = "2"
tracing = "0.1"

htsget-config = { version = "0.20.0", path = "../htsget-config", default-features = false }
htsget-search = { version = "0.12.4", path = "../htsget-search", default-features = false }
htsget-http = { version = "0.8.3", path = "../htsget-http", default-features = false }

[dev-dependencies]
htsget-test = { path = "../htsget-test", features = ["http"], default-features = false }

tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
