[package]
name = "htsget-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2"
async-trait = "0.1"

# htsget-rs
htsget-config = { version = "0.2.0" }
htsget-search = { version = "0.2.0", path = "../htsget-search", default-features = false }
htsget-http = { version = "0.2.0", path = "../htsget-http", default-features = false }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }

# Benchmarking
criterion = { version = "0.4", features = ["async_tokio"] }
pprof = { version = "0.11", features = ["criterion", "flamegraph"]}

[[bench]]
name = "search-benchmarks"
harness = false
path = "benches/search_benchmarks.rs"