[package]
name = "htsget"
version = "0.1.0"
authors = ["Christian Perez Llamas <christian.perez@adevinta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"
clap = { default-features = false, version = "~2.33"}

htsget-search = {path = "../htsget-search" }
