[package]
name = "htsget-cloudflare"
version = "0.0.1"
edition = "2021"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.12"
serde = { version = "1", features = ["derive"]} 
serde_json = "1"

htsget-config = "0.1.0"
htsget-http = "0.1.0"
htsget-search = "0.1.0"
http = "0.2"
mime = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
