[package]
name = "htsget-config"
version = "0.8.1"
rust-version = "1.70"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"
description = "Used to configure htsget-rs by using a config file or reading environment variables."
license = "MIT"
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-config/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-config/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
s3-storage = []
url-storage = ["hyper"]
default = []

[dependencies]
thiserror = "1"
async-trait = "0"
noodles = { version = "0", features = ["core"] }
tokio-serde = { version = "0" }
serde_with = "3"
serde_regex = "1"
regex = "1"
figment = { version = "0", features = ["env", "toml"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["registry", "env-filter", "ansi", "json"] }
toml = "0"
http = "1"
http-serde = "2"
rustls-pemfile = "2"
rustls = "0"
rustls-cert-file-reader = "0"
rustls-native-certs = "0"
rustls-webpki = { version = "0", features = ["std"] }
rustls-pki-types = { version = "1", features = ["alloc"] }
hyper-rustls = { version = "0", features = ["rustls-native-certs", "http2", "http1"] }

hyper = { version = "1", features = ["http1", "http2", "client"], optional = true }

[dev-dependencies]
serde_json = "1"
figment = { version = "0", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
rcgen = "0"
