[package]
name = "htsget-config"
version = "0.11.0"
rust-version = "1.75"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
description = "Used to configure htsget-rs by using a config file or reading environment variables."
license = "MIT"
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-config/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-config/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
s3-storage = []
url-storage = ["dep:reqwest", "dep:cfg-if"]
experimental = ["dep:crypt4gh"]
default = []

[dependencies]
thiserror = "1"
async-trait = "0.1"
noodles = { version = "0.83", features = ["core"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_regex = "1"
regex = "1"
figment = { version = "0.10", features = ["env", "toml"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "ansi", "json"] }
toml = "0.8"
http = "1"
http-serde = "2"
rustls-pemfile = "2"
rustls = "0.23"
rustls-pki-types = "1"

# url-storage
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false, optional = true }
cfg-if = { version = "1", optional = true }

# Crypt4GH
crypt4gh = { version = "0.4", git = "https://github.com/EGA-archive/crypt4gh-rust", optional = true }

[dev-dependencies]
serde_json = "1"
figment = { version = "0.10", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
rcgen = { version = "0.13", features = ["pem"] }
