[package]
name = "htsget-config"
version = "0.17.0"
rust-version = "1.86"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2024"
description = "Used to configure htsget-rs by using a config file or reading environment variables."
license = "MIT"
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-config/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-config/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
aws = ["dep:aws-sdk-secretsmanager", "dep:aws-config", "dep:tempfile"]
url = []
experimental = ["dep:crypt4gh", "dep:tokio", "dep:futures-util"]
default = []

[dependencies]
thiserror = "2"
async-trait = "0.1"
noodles = { version = "0.100", features = ["core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1"
regex = "1"
cfg-if = { version = "1" }
figment = { version = "0.10", features = ["env", "toml"] }
clap = { version = "4", features = ["derive", "env", "cargo"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "ansi", "json"] }
toml = "0.9"
http = "1"
http-serde = "2"
rustls-pemfile = "2"
rustls = "0.23"
rustls-pki-types = "1"
chrono = { version = "0.4", features = ["now"], default-features = false }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
http-cache-reqwest = "0.16"
reqwest-middleware = "0.4"
schemars = "1"

# Crypt4GH
crypt4gh = { version = "0.4", git = "https://github.com/EGA-archive/crypt4gh-rust", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
futures-util = { version = "0.3", optional = true }

# Secrets manager
aws-sdk-secretsmanager = { version = "1", optional = true, features = ["test-util"] }
aws-config = { version = "1", optional = true }
tempfile = { version = "3", optional = true }

[build-dependencies]
schemars = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
rcgen = { version = "0.14", features = ["pem"] }
aws-smithy-mocks = "0.1"
