[package]
name = "htsget-devtools"
version = "0.1.0"
authors = ["Christian Perez Llamas <christian.perez@adevinta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"

noodles-bgzf = { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }
noodles-bam = { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }
noodles-sam = { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }
noodles-vcf =   { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }
noodles-bcf =   { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }
noodles-tabix = { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }
noodles-csi = { git = "https://github.com/zaeleus/noodles.git", rev = "2f23ab7a864573e3175e2b5c249a4afe470cd73c" }