[package]
name = "htsget-devtools"
version = "0.1.0"
authors = ["Christian Perez Llamas <christian.perez@adevinta.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"

noodles = { version = "0.2.0", features = ["bam", "bcf", "bgzf", "cram", "csi", "sam", "tabix", "vcf"] }