[package]
name = "htsget-devtools"
version = "0.1.0"
authors = ["Christian Perez Llamas <christian.perez@adevinta.com>"]
edition = "2021"

[dependencies]

serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"
byteorder = "1.4"

noodles = { version = "0.18.0", features = ["bam", "bcf", "bgzf", "cram", "csi", "sam", "tabix", "vcf"] }