[package]
name = "htsget-http-actix"
version = "0.1.0"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
default = ["async", "htsget-search/default", "htsget-http-core/default"]
async = ["tokio", "futures", "htsget-search/async", "htsget-http-core/async"]

[dependencies]
actix-web = "4.0"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false }
htsget-http-core = { path = "../htsget-http-core" }
htsget-search = { path = "../htsget-search" }
htsget-config = { path = "../htsget-config" }
futures = { version = "0.3", optional = true }
tokio = { version = "1.17", features = ["full"], optional = true }
