[package]
name = "htsget-http-actix"
version = "0.1.0"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
s3-storage = []
default = ["s3-storage", "htsget-config/default", "htsget-search/default", "htsget-http-core/default"]

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false }
htsget-http-core = { path = "../htsget-http-core" }
htsget-search = { path = "../htsget-search" }
htsget-config = { path = "../htsget-config" }
futures = { version = "0.3" }
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
htsget-test-utils = { path = "../htsget-test-utils" }
async-trait = "0.1"