[package]
name = "htsget-http-actix"
version = "0.1.0"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
s3-storage = ["htsget-config/s3-storage", "htsget-config/s3-storage", "htsget-http-core/s3-storage", "htsget-test-utils/s3-storage"]
default = ["s3-storage"]

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3" }
htsget-http-core = { path = "../htsget-http-core", default-features = false }
htsget-search = { path = "../htsget-search", default-features = false}
htsget-config = { path = "../htsget-config", default-features = false }
futures = { version = "0.3" }
tokio = { version = "1.17", features = ["full"] }
tracing-actix-web = "0.5"
tracing = "0.1"

[dev-dependencies]
htsget-test-utils = { path = "../htsget-test-utils", features = ["server-tests"], default-features = false }
async-trait = "0.1"

criterion = { version = "0.3", features = ["async_tokio"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
tempfile = "3.3"

[[bench]]
name = "request-benchmark"
harness = false