[package]
name = "htsget-http-core"
version = "0.1.0"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
default = ["htsget-search/default"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
htsget-search = { path = "../htsget-search" }
htsget-config = { path = "../htsget-config" }
futures = { version = "0.3" }
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
