[package]
name = "htsget-http-core"
version = "0.1.0"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>"]
edition = "2021"

[features]
s3-storage = ["htsget-config/s3-storage", "htsget-search/s3-storage", "htsget-test-utils/s3-storage"]
default = ["s3-storage"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
http = "0.2"
htsget-search = { path = "../htsget-search", default-features = false }
htsget-config = { path = "../htsget-config", default-features = false }
futures = { version = "0.3" }
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
htsget-test-utils = { path = "../htsget-test-utils", default-features = false }
