[package]
name = "htsget-http-lambda"
version = "0.1.0"
authors = ["Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"

[features]
s3-storage = ["htsget-config/s3-storage", "htsget-search/s3-storage", "htsget-http-core/s3-storage", "htsget-test-utils/s3-storage"]
default = ["s3-storage"]

[dependencies]
envy = "0.4"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["cors"] }
lambda_http = { version = "0.7" }
lambda_runtime = { version = "0.7" }
htsget-config = { version = "0.1.0", git = "https://github.com/umccr/htsget-rs", default-features = false }
htsget-search = { version = "0.1.0", git = "https://github.com/umccr/htsget-rs", default-features = false }
htsget-http-core = { version = "0.1.0", git = "https://github.com/umccr/htsget-rs", default-features = false }
serde = { version = "1.0" }
serde_json = "1.0"
mime = "0.3"
regex = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.2"

[dev-dependencies]
htsget-test-utils = { version = "0.1.0", git = "https://github.com/umccr/htsget-rs", features = ["server-tests", "cors-tests"], default-features = false }
async-trait = "0.1"
query_map = { version = "0.6", features = ["url-query"] }
tempfile = "3.3"
