[package]
name = "htsget-http"
version = "0.5.1"
rust-version = "1.75"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2021"
license = "MIT"
description = "Crate for handling HTTP in htsget-rs."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-http/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-http/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
aws = ["htsget-config/aws", "htsget-search/aws", "htsget-test/aws"]
url = ["htsget-config/url", "htsget-search/url", "htsget-test/url"]
experimental = ["htsget-config/experimental", "htsget-search/experimental", "htsget-test/experimental"]
default = []

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
htsget-search = { version = "0.9.1", path = "../htsget-search", default-features = false }
htsget-config = { version = "0.12.0", path = "../htsget-config", default-features = false }
htsget-test = { version = "0.7.1", path = "../htsget-test", default-features = false }
futures = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
