[package]
name = "htsget-http"
version = "0.7.3"
rust-version = "1.86"
authors = ["Daniel del Castillo de la Rosa <delcastillodelarosadaniel@gmail.com>", "Marko Malenic <mmalenic1@gmail.com>", "Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2024"
license = "MIT"
description = "Crate for handling HTTP in htsget-rs."
documentation = "https://github.com/umccr/htsget-rs/blob/main/htsget-http/README.md"
homepage = "https://github.com/umccr/htsget-rs/blob/main/htsget-http/README.md"
repository = "https://github.com/umccr/htsget-rs"

[features]
aws = ["htsget-config/aws", "htsget-search/aws", "htsget-test/aws"]
url = ["htsget-config/url", "htsget-search/url", "htsget-test/url"]
experimental = ["htsget-config/experimental", "htsget-search/experimental", "htsget-test/experimental"]
default = []

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
htsget-search = { version = "0.11.4", path = "../htsget-search", default-features = false }
htsget-config = { version = "0.17.0", path = "../htsget-config", default-features = false }
futures = { version = "0.3" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
cfg-if = "1"

# JWT middleware
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
jsonpath-rust = "1"
regex = "1"
headers = "0.4"

[dev-dependencies]
htsget-test = { path = "../htsget-test", default-features = false }
