[package]
name = "htsget-integration-tests-s3"
version = "0.1.0"
authors = ["Andrew Patterson <andrew@patto.net>"]
edition = "2018"

[dependencies]
htsget-http-actix = { path = "../htsget-http-actix" }
htsget-http-core = { path = "../htsget-http-core" }
htsget-id-resolver = { path = "../htsget-id-resolver" }
htsget-search = { path = "../htsget-search", features = ["aws", "async"] }
actix-web = "3"
regex = "1.5"
envy = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3.5", default-features = false }
futures = { version = "0.3.16" }
tokio = { version = "1.9.0", features = ["full"] }
s3-server = { version = "0.1.0" }
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.20-alpha", package = "aws-sdk-s3" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.20-alpha", package = "aws-config" }
